# fineai-test-demo

./: .13.prod.env  .14.prod.env  .827.env  .827.prod.env  .dev.env  .env  .gitignore  .prod.env  README.md  pyproject.toml  run.sh
data/: .dev.2.data  .dev.data  .prod.2.data  .prod.3.data  .prod.4.data  .prod.data
note/: face.ipynb
pod/: init.sh  start.sh  testpod.yml
src/api/: app.py  asyncapp.py  config.py  db.py  server_internal.py  session.py  task.py  utils.py
src/fineai_test/: __init__.py  config.py  main.py  trial.py
src/fineai_test/db/: __init__.py  app.py  app_old.py
src/fineai_test/services/: app.py  mq.py
src/fineai_test/utils/: s3.py  utils.py
templates/: index.html  jobs.html  layout.html  lora.html  model.html  model_dataset_verify.html  model_face_detection.html  model_images.html  model_img2img.html  model_jobs.html  model_lora.html  models.html  nav.html  outputs.html  vs.html
templates/components/: footer.html  job.html  layout.html  model.html  nav.html  pagination.html
tests/: api_test.py  asyncapi_test.py  concurrent_test.py  internal_test.py  locustfile.py  locustfile2.py  locustfile3.py  task_test.py  utils_test.py  xx_test.py
tmp/: facenet.py  xx_test.py
