[project]
name = "fineai-test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "chenshengguo", email = "chenshengguo@xinpianchang.com" }
]
dependencies = [
    "fastapi>=0.101.1",
    "uvicorn>=0.23.2",
    "pytest>=7.4.0",
    "ruff>=0.0.285",
    "sqlalchemy[asyncio]>=2.0.20",
    "asyncio>=3.4.3",
    "aiohttp>=3.8.5",
    "coverage>=7.3.0",
    "jinja2>=3.1.2",
    "asyncpg>=0.28.0",
    "requests>=2.31.0",
    "pyjwt>=2.8.0",
    "hashids>=1.3.1",
    "pydantic-settings>=2.0.3",
    "pillow>=10.0.0",
    "ipython>=8.12.2",
    "boto3>=1.28.35",
    "fastapi-pagination>=0.12.9",
    "pytest-asyncio>=0.21.1",
    "psycopg[binary]>=3.1.10",
    "retrying>=1.3.4",
    "pika>=1.3.2",
    "fineai-task-schema @ git+https://robot:b37b72ff3562754b870e265aafe2d795464e3202@gitea.vmovier.cc/fineai/fineai-task-schema.git@v0.1.13",
    "aiofiles>=23.2.1",
    "locust>=2.16.1",
    "locust-plugins>=4.0.0",
    "kazoo>=2.9.0",
    "sqlakeyset>=2.0.1691149549",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.0.285",
    "sqlacodegen-v2>=0.1.4",
    "psycopg2-binary>=2.9.7",
    "pip>=23.2.1",
    "face_recognition>=1.3.0",
    "face_recognition_models>=0.3.0",
]

[tool.hatch.metadata]
allow-direct-references = true
